# pyseldonlib

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE.html  Project.md  README.md  TODO.txt  agents.txt  concerns.txt  contributing.html  environment.yml  genindex.html  index.html  index.rst  install.html  issues.txt  meson.build  nothing.txt  objects.inv  op.txt  py-modindex.html  pyproject.toml  quickstart.html  schema.py  search.html  searchindex.js
.doctrees/: LICENSE.doctree  contributing.doctree  environment.pickle  index.doctree  install.doctree  quickstart.doctree
.doctrees/examples/: degrootmodel.doctree  index.doctree  network.doctree
.doctrees/source/reference/: activitydriven.doctree  deffuant.doctree  deffuantvector.doctree  degroot.doctree  index.doctree  inertial.doctree  introduction.doctree  models.doctree  network.doctree  packagereference.doctree  util.doctree
.github/workflow/: main.yml  sphinx-deploy.yml
.github/workflows/: build_wheels.yml  main.yml  sphinx-deploy.txt  sphinx-deploy.yml
.mesonpy-8i917udb/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  meson-python-native-file.ini
.mesonpy-8i917udb/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-compilers.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
.mesonpy-8i917udb/meson-logs/: meson-log.txt
.mesonpy-8i917udb/meson-private/: cmd_line.txt  python-3.12-installed.json
.mesonpy-8i917udb/meson-private/__CMake_compiler_info__/: CMakeCache.txt  build.ninja  cmake_install.cmake  cmake_trace.txt
.mesonpy-8i917udb/meson-private/cmake_tomlplusplus/: CMakeCache.txt  CMakeLists.txt  CMakeMesonToolchainFile.cmake  Makefile  cmake_install.cmake  cmake_trace.txt
_modules/: index.html
_modules/pyseldonlib/: ActivityDrivenModel.html  DeGrootModel.html  DeffuantModel.html  DeffuantVectorModel.html  InertialModel.html  _othersettings.html  _run_simulation.html  network.html  utils.html
_sources/: index.rst.txt
_sources/examples/: degrootmodel.md.txt  network.md.txt
_sources/source/reference/: activitydriven.rst.txt  deffuantvector.rst.txt  degroot.rst.txt  introduction.rst.txt  network.rst.txt  packagereference.rst.txt
bindings_package/: __init__.py
doc/: Makefile  conf.py  index.md  index.rst  requirements.txt
doc/source/: conf.py
doc/source/api-reference/: api-reference.md  pyseldon.md
docs/: LICENSE.md  activitydriven.txt  conf.py  contributing.md  examples.rst  extrarequirements.txt  index.rst  install.rst  quickstart.rst  refs.bib  requirements.txt
docs/examples/: degrootmodel.ipynb  index.rst  network.ipynb  refactoredCode.py  test.toml
docs/source/api-reference/: api-reference.rst  pyseldon.rst
docs/source/reference/: activitydriven.rst  deffuant.rst  deffuantvector.rst  degroot.rst  extras.rst  index.rst  inertial.rst  models.rst  network.rst  packagereference.rst  pyseldon.rst  util.rst
examples/: DeGroot.ipynb  Deffuant.ipynb  activity.py  deffuantSettings.toml  degrootmodel.html  degrootmodel.ipynb  demo.ipynb  index.html  network.html  plottingexample.ipynb  test_package.py
examples/ouput_20_agents_10_connections_each/: network.csv
examples/output_20_agents_4_connections_each/ouput_20_agents/: opinions_10.txt  opinions_11.txt  opinions_4.txt
output1/: network_0.txt  opinions_0.txt
pyseldon/: ActivityDrivenModel.py  DeGrootModel.py  DeffuantModel.py  DeffuantVectorModel.py  InertialModel.py  __init__.py  _basemodel.py  _network.py  _othersettings.py  _run_simulation.py  core.py  network.py  simulation.py
pyseldonlib/: ActivityDrivenModel.py  DeGrootModel.py  DeffuantModel.py  DeffuantVectorModel.py  InertialModel.py  __init__.py  _basemodel.py  _run_simulation.py  network.py  utils.py
python_bindings/: bindings.cpp
source/reference/: activitydriven.html  deffuant.html  deffuantvector.html  degroot.html  index.html  inertial.html  introduction.html  models.html  network.html  packagereference.html  util.html
src/: __init__.py  network.py  simulation.py
subprojects/: seldon.wrap
tests/: README.md  demo.ipynb  demo.py  test.py  test_activity_driven.py  test_activity_driven_inertial_settings.py  test_activity_driven_settings.py  test_activity_inertial.py  test_deGroot.py  test_deffuant.py  test_deffuant_settings.py  test_degroot_settings.py  test_initial_network_settings.py  test_io.py  test_network.py  test_network_generation.py  test_output_settings.py  test_package.py  test_probability_distributions.py  test_sampling.py  test_tarjan_scc.py  test_util.py
tests/network/: network.txt
tests/output_meanfield_test/: network_0.txt  opinions_0.txt
tests/outputs/opwithnetwork/: network_0.txt  opinions_1.txt
tests/outputs/outputfile/: network_0.txt  opinions_0.txt  opinions_1.txt  opinions_2.txt  opinions_3.txt  opinions_4.txt  opinions_5.txt  opinions_6.txt  opinions_7.txt  opinions_8.txt
tests/res/: activity_probabilistic_conf.toml
tests/res/config/: conf.toml  inconf.toml
tests/res/network/: net.txt
tests/seldoncore/: test.py  test_activity_driven_settings.py  test_deffuant_settings.py  test_degroot_settings.py  test_initial_network_settings.py  test_io.py  test_network.py  test_network_generation.py  test_nnetwork.py  test_output_settings.py  test_probability_distributions.py  test_sampling.py  test_tarjan_scc.py  test_util.py
visualisations/: cytoscapenormalisation.py  degrootmodel.ipynb
visualisations/ouput_20_agents/: network_0.txt  opinions_10.txt
visualisations/ouput_20_agents_10_connections_each/: degrootmodel.ipynb  degrootmodel.py  network_0.txt  opinions_0.csv  opinions_10.csv
visualisations/output_20_agents_4_connections_each/: degrootmodel.ipynb  degrootmodel.py
visualisations/output_20_agents_4_connections_each/ouput_20_agents/: network_0.txt  opinions_0.txt  opinions_1.txt  opinions_12.txt  opinions_13.txt  opinions_14.txt  opinions_15.txt  opinions_16.txt  opinions_17.txt  opinions_18.txt  opinions_19.txt  opinions_2.txt  opinions_20.txt  opinions_3.txt  (+5 more)
(+44 files in other folders)
