[project]
name = "pyseldon"
version = "1.0"
description="Python Bindings for the Seldon Framework"
authors = [
    {name = "Amrita Goswami", email = "amrita16thaug646@gmail.com"},
    {name = "Moritz Sallermann", email = "moritzsallermann@gmail.com"},
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
    {name = "Daivik Karbhari", email="daivikkarbhari01@gmail.com"}
    ]
dependencies=[
    "pybind11>=2.12.0"
]
keywords = ['seldon', 'opinion-dynamics','opinion-dynamics-simulation', 'seldon-code', 'social-influence', 'social-dynamics']
requires-python = ">=3.9"
readme = 'README.md'
license = {text = "GPL v3"}  # just mention the license text to not clutter the metadata


[build-system]
requires = ["pybind11","meson-python"]
build-backend= "mesonpy"

[tool.meson-python.args]
install = ['--skip-subprojects']


[tool.cibuildwheel]
skip = [ "pp*" ]

[tool.cibuildwheel.linux]
archs = ["auto64"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"

[tool.cibuildwheel.macos]
archs = [ "auto64" ]

[tool.cibuildwheel.windows]
archs = [ "auto64" ]
